test/lexerTest/fail/test6.ic
Can==You==Dig==It
ILOve        PIE!
....jk, /*"I love Cake"*/
Single &
"Can this string take a 'char'"
